// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BarStack should render correctly 1`] = `
<DocumentFragment>
  .cache-primk0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #FCFCFD;
  border-radius: 4px;
  box-shadow: inset 0px 0px 0px 1px #F6F6F8;
  overflow: hidden;
}

.cache-primk0 .e17nk4tl2:nth-child(5n+1) {
  background: linear-gradient(-45deg, rgba(252,252,253,0.1) 25%,
        #4F0599 25%, #4F0599 50%,
        rgba(252,252,253,0.1) 50%, rgba(252,252,253,0.1) 75%, #4F0599
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #4F0599;
}

.cache-primk0 .e17nk4tl2:nth-child(5n+2) {
  background-color: #6907ca;
  background-image: linear-gradient(
          135deg,
          rgba(252,252,253,0.25)
            25%,
          transparent 25%
        ),linear-gradient(
          225deg,
          rgba(252,252,253,0.25)
            25%,
          transparent 25%
        ),linear-gradient(
          45deg,
          rgba(252,252,253,0.25)
            25%,
          transparent 25%
        ),linear-gradient(
          315deg,
          rgba(252,252,253,0.25)
            25%,
          #6907ca
            25%
        );
  -webkit-background-position: 10px 0,10px 0,0 0,0 0;
  background-position: 10px 0,10px 0,0 0,0 0;
  -webkit-background-size: 10px 10px;
  background-size: 10px 10px;
  background-repeat: repeat;
}

.cache-primk0 .e17nk4tl2:nth-child(5n+3) {
  background: linear-gradient(-45deg, rgba(252,252,253,0.1) 25%,
        #A365F6 25%, #A365F6 50%,
        rgba(252,252,253,0.1) 50%, rgba(252,252,253,0.1) 75%, #A365F6
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #6b0ee7;
}

.cache-primk0 .e17nk4tl2:nth-child(5n+4) {
  background-color: #A365F6;
  background-image: linear-gradient(
          135deg,
          rgba(252,252,253,0.2)
            25%,
          transparent 25%
        ),linear-gradient(
          225deg,
          rgba(252,252,253,0.2)
            25%,
          transparent 25%
        ),linear-gradient(
          45deg,
          rgba(252,252,253,0.2)
            25%,
          transparent 25%
        ),linear-gradient(
          315deg,
          rgba(252,252,253,0.2)
            25%,
          #A365F6 25%
        );
  -webkit-background-position: 10px 0,10px 0,0 0,0 0;
  background-position: 10px 0,10px 0,0 0,0 0;
  -webkit-background-size: 10px 10px;
  background-size: 10px 10px;
  background-repeat: repeat;
}

.cache-primk0 .e17nk4tl2:nth-child(5n+5) {
  background: linear-gradient(-45deg, rgba(252,252,253,0.2) 25%,
        #c095f9 25%, #c095f9 50%,
        rgba(252,252,253,0.2) 50%, rgba(252,252,253,0.2) 75%, #c095f9
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #c095f9;
}

.cache-1p44jpa {
  width: 0px;
  -webkit-transition: width 500ms;
  transition: width 500ms;
  background-color: #FCFCFD;
}

.cache-crth9z {
  height: 50px;
  font-weight: 600;
  color: #FCFCFD;
  font-size: 14px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-shadow: -1px 0 rgba(74,79,98,0.3),0 1px rgba(74,79,98,0.3),1px 0 rgba(74,79,98,0.3),0 -1px rgba(74,79,98,0.3);
}

<div
    class="cache-primk0 e17nk4tl0"
  >
    <div
      class="cache-1p44jpa e17nk4tl2"
      style="width: 10.638297872340425%;"
    >
      <div
        class="cache-crth9z e17nk4tl1"
      >
        Hello
      </div>
    </div>
    <div
      class="cache-1p44jpa e17nk4tl2"
      style="width: 22.340425531914892%;"
    >
      <div
        class="cache-crth9z e17nk4tl1"
      />
    </div>
    <div
      class="cache-1p44jpa e17nk4tl2"
      style="width: 22.340425531914892%;"
    >
      <div
        class="cache-crth9z e17nk4tl1"
      >
        Encore
      </div>
    </div>
    <div
      class="cache-1p44jpa e17nk4tl2"
      style="width: 22.340425531914892%;"
    >
      <div
        class="cache-crth9z e17nk4tl1"
      >
        Next
      </div>
    </div>
    <div
      class="cache-1p44jpa e17nk4tl2"
      style="width: 22.340425531914892%;"
    >
      <div
        class="cache-crth9z e17nk4tl1"
      >
        Bye bye
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BarStack should render correctly with event handlers 1`] = `
<DocumentFragment>
  .cache-primk0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #FCFCFD;
  border-radius: 4px;
  box-shadow: inset 0px 0px 0px 1px #F6F6F8;
  overflow: hidden;
}

.cache-primk0 .e17nk4tl2:nth-child(5n+1) {
  background: linear-gradient(-45deg, rgba(252,252,253,0.1) 25%,
        #4F0599 25%, #4F0599 50%,
        rgba(252,252,253,0.1) 50%, rgba(252,252,253,0.1) 75%, #4F0599
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #4F0599;
}

.cache-primk0 .e17nk4tl2:nth-child(5n+2) {
  background-color: #6907ca;
  background-image: linear-gradient(
          135deg,
          rgba(252,252,253,0.25)
            25%,
          transparent 25%
        ),linear-gradient(
          225deg,
          rgba(252,252,253,0.25)
            25%,
          transparent 25%
        ),linear-gradient(
          45deg,
          rgba(252,252,253,0.25)
            25%,
          transparent 25%
        ),linear-gradient(
          315deg,
          rgba(252,252,253,0.25)
            25%,
          #6907ca
            25%
        );
  -webkit-background-position: 10px 0,10px 0,0 0,0 0;
  background-position: 10px 0,10px 0,0 0,0 0;
  -webkit-background-size: 10px 10px;
  background-size: 10px 10px;
  background-repeat: repeat;
}

.cache-primk0 .e17nk4tl2:nth-child(5n+3) {
  background: linear-gradient(-45deg, rgba(252,252,253,0.1) 25%,
        #A365F6 25%, #A365F6 50%,
        rgba(252,252,253,0.1) 50%, rgba(252,252,253,0.1) 75%, #A365F6
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #6b0ee7;
}

.cache-primk0 .e17nk4tl2:nth-child(5n+4) {
  background-color: #A365F6;
  background-image: linear-gradient(
          135deg,
          rgba(252,252,253,0.2)
            25%,
          transparent 25%
        ),linear-gradient(
          225deg,
          rgba(252,252,253,0.2)
            25%,
          transparent 25%
        ),linear-gradient(
          45deg,
          rgba(252,252,253,0.2)
            25%,
          transparent 25%
        ),linear-gradient(
          315deg,
          rgba(252,252,253,0.2)
            25%,
          #A365F6 25%
        );
  -webkit-background-position: 10px 0,10px 0,0 0,0 0;
  background-position: 10px 0,10px 0,0 0,0 0;
  -webkit-background-size: 10px 10px;
  background-size: 10px 10px;
  background-repeat: repeat;
}

.cache-primk0 .e17nk4tl2:nth-child(5n+5) {
  background: linear-gradient(-45deg, rgba(252,252,253,0.2) 25%,
        #c095f9 25%, #c095f9 50%,
        rgba(252,252,253,0.2) 50%, rgba(252,252,253,0.2) 75%, #c095f9
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #c095f9;
}

.cache-1p44jpa {
  width: 0px;
  -webkit-transition: width 500ms;
  transition: width 500ms;
  background-color: #FCFCFD;
}

.cache-crth9z {
  height: 50px;
  font-weight: 600;
  color: #FCFCFD;
  font-size: 14px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-shadow: -1px 0 rgba(74,79,98,0.3),0 1px rgba(74,79,98,0.3),1px 0 rgba(74,79,98,0.3),0 -1px rgba(74,79,98,0.3);
}

<div
    class="cache-primk0 e17nk4tl0"
  >
    <div
      class="cache-1p44jpa e17nk4tl2"
      style="width: 100%;"
    >
      <div
        class="cache-crth9z e17nk4tl1"
      >
        Hello
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BarStack should render correctly with total 1`] = `
<DocumentFragment>
  .cache-primk0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #FCFCFD;
  border-radius: 4px;
  box-shadow: inset 0px 0px 0px 1px #F6F6F8;
  overflow: hidden;
}

.cache-primk0 .e17nk4tl2:nth-child(5n+1) {
  background: linear-gradient(-45deg, rgba(252,252,253,0.1) 25%,
        #4F0599 25%, #4F0599 50%,
        rgba(252,252,253,0.1) 50%, rgba(252,252,253,0.1) 75%, #4F0599
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #4F0599;
}

.cache-primk0 .e17nk4tl2:nth-child(5n+2) {
  background-color: #6907ca;
  background-image: linear-gradient(
          135deg,
          rgba(252,252,253,0.25)
            25%,
          transparent 25%
        ),linear-gradient(
          225deg,
          rgba(252,252,253,0.25)
            25%,
          transparent 25%
        ),linear-gradient(
          45deg,
          rgba(252,252,253,0.25)
            25%,
          transparent 25%
        ),linear-gradient(
          315deg,
          rgba(252,252,253,0.25)
            25%,
          #6907ca
            25%
        );
  -webkit-background-position: 10px 0,10px 0,0 0,0 0;
  background-position: 10px 0,10px 0,0 0,0 0;
  -webkit-background-size: 10px 10px;
  background-size: 10px 10px;
  background-repeat: repeat;
}

.cache-primk0 .e17nk4tl2:nth-child(5n+3) {
  background: linear-gradient(-45deg, rgba(252,252,253,0.1) 25%,
        #A365F6 25%, #A365F6 50%,
        rgba(252,252,253,0.1) 50%, rgba(252,252,253,0.1) 75%, #A365F6
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #6b0ee7;
}

.cache-primk0 .e17nk4tl2:nth-child(5n+4) {
  background-color: #A365F6;
  background-image: linear-gradient(
          135deg,
          rgba(252,252,253,0.2)
            25%,
          transparent 25%
        ),linear-gradient(
          225deg,
          rgba(252,252,253,0.2)
            25%,
          transparent 25%
        ),linear-gradient(
          45deg,
          rgba(252,252,253,0.2)
            25%,
          transparent 25%
        ),linear-gradient(
          315deg,
          rgba(252,252,253,0.2)
            25%,
          #A365F6 25%
        );
  -webkit-background-position: 10px 0,10px 0,0 0,0 0;
  background-position: 10px 0,10px 0,0 0,0 0;
  -webkit-background-size: 10px 10px;
  background-size: 10px 10px;
  background-repeat: repeat;
}

.cache-primk0 .e17nk4tl2:nth-child(5n+5) {
  background: linear-gradient(-45deg, rgba(252,252,253,0.2) 25%,
        #c095f9 25%, #c095f9 50%,
        rgba(252,252,253,0.2) 50%, rgba(252,252,253,0.2) 75%, #c095f9
         75%);
  -webkit-background-size: 30px 30px;
  background-size: 30px 30px;
  background-color: #c095f9;
}

.cache-1p44jpa {
  width: 0px;
  -webkit-transition: width 500ms;
  transition: width 500ms;
  background-color: #FCFCFD;
}

.cache-crth9z {
  height: 50px;
  font-weight: 600;
  color: #FCFCFD;
  font-size: 14px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-shadow: -1px 0 rgba(74,79,98,0.3),0 1px rgba(74,79,98,0.3),1px 0 rgba(74,79,98,0.3),0 -1px rgba(74,79,98,0.3);
}

<div
    class="cache-primk0 e17nk4tl0"
  >
    <div
      class="cache-1p44jpa e17nk4tl2"
      style="width: 2%;"
    >
      <div
        class="cache-crth9z e17nk4tl1"
      >
        Hello
      </div>
    </div>
    <div
      class="cache-1p44jpa e17nk4tl2"
      style="width: 4.2%;"
    >
      <div
        class="cache-crth9z e17nk4tl1"
      />
    </div>
    <div
      class="cache-1p44jpa e17nk4tl2"
      style="width: 4.2%;"
    >
      <div
        class="cache-crth9z e17nk4tl1"
      >
        Encore
      </div>
    </div>
    <div
      class="cache-1p44jpa e17nk4tl2"
      style="width: 4.2%;"
    >
      <div
        class="cache-crth9z e17nk4tl1"
      >
        Next
      </div>
    </div>
    <div
      class="cache-1p44jpa e17nk4tl2"
      style="width: 4.2%;"
    >
      <div
        class="cache-crth9z e17nk4tl1"
      >
        Bye bye
      </div>
    </div>
  </div>
</DocumentFragment>
`;
